--- a/index.html
+++ b/index.html
@@ -93,24 +93,18 @@
                                     <th class="py-2 px-3">BlS</th>
                                 </tr>
                             </thead>
-                            <tbody id="draft-pool-tbody" class="divide-y">
-                                <!-- Player rows will be injected here -->
-                            </tbody>
+                            <tbody id="draft-pool-tbody" class="divide-y"></tbody>
                         </table>
                     </div>
                 </div>
 
                 <div class="border-l pl-6">
-                    <div id="selected-player-card" class="bg-gray-50 p-4 rounded-lg mb-4 min-h-[140px]">
-                        <p class="text-gray-500">Select a player to see their details</p>
-                    </div>
+                    <div id="selected-player-card" class="bg-gray-50 p-4 rounded-lg mb-4 min-h-[140px]"></div>
                     <button id="draft-player-btn" class="w-full bg-amber-500 text-white font-bold py-3 rounded-lg disabled:bg-gray-400">Draft Player</button>
                     <div class="mt-4">
                         <h4 class="font-bold text-lg">Your Roster (<span id="roster-count">0</span>/10)</h4>
-                        <ul id="draft-roster-list" class="mt-2 bg-gray-50 rounded-lg divide-y h-64 overflow-y-auto">
-                            <!-- Roster players will be injected here -->
-                        </ul>
-                        <div id="roster-summary" class="mt-2 p-2 bg-gray-100 rounded"></div>
+                        <ul id="draft-roster-list" class="mt-2 bg-gray-50 rounded-lg divide-y h-72 overflow-y-auto"></ul>
+                        <div id="roster-summary" class="mt-2 p-2 bg-blue-50 rounded-lg"></div>
                     </div>
                 </div>
             </div>
@@ -120,14 +114,14 @@
         <div id="dashboard-screen" class="hidden">
             <header class="bg-white p-4 rounded-lg shadow-md mb-4 flex justify-between items-center">
                 <div>
-                    <h2 id="dashboard-team-name" class="text-2xl font-bold"></h2>
-                    <p id="dashboard-record" class="text-gray-600"></p>
+                    <h2 id="dashboard-team-name" class="text-2xl font-bold text-gray-800"></h2>
+                    <p id="dashboard-record" class="text-gray-600 font-semibold"></p>
                 </div>
                 <div class="text-right">
-                    <p class="font-bold">Season <span id="dashboard-year"></span></p>
+                    <p class="font-bold text-lg">Season <span id="dashboard-year"></span></p>
                     <p class="text-gray-600" id="dashboard-week"></p>
                 </div>
-                <button id="advance-week-btn" class="bg-amber-500 hover:bg-amber-600 text-white font-bold py-2 px-4 rounded-lg transition">Advance Week</button>
+                <button id="advance-week-btn" class="bg-amber-500 hover:bg-amber-600 text-white font-bold py-2 px-6 rounded-lg transition text-lg">Advance Week</button>
             </header>
             
             <div class="flex gap-6">
@@ -136,7 +130,10 @@
                     <nav class="flex flex-col space-y-1">
                         <button data-tab="my-team" class="tab-button active">My Team</button>
                         <button data-tab="depth-chart" class="tab-button">Depth Chart</button>
-                        <button data-tab="free-agency" class="tab-button">Free Agency</button>
+                        <button data-tab="messages" class="tab-button relative">
+                            Text Messages
+                            <span id="messages-notification-dot" class="notification-dot hidden"></span>
+                        </button>
                         <button data-tab="schedule" class="tab-button">Schedule</button>
                         <button data-tab="standings" class="tab-button">Standings</button>
                         <button data-tab="player-stats" class="tab-button">Player Stats</button>
@@ -148,138 +145,60 @@
                 <main id="dashboard-content" class="w-4/5 bg-white p-6 rounded-lg shadow-md">
                     <div id="tab-content-my-team" class="tab-pane">
                         <h3 class="text-xl font-bold mb-4">Team Roster</h3>
-                        <div id="my-team-roster"></div>
+                        <div id="my-team-roster" class="overflow-x-auto"></div>
                     </div>
                     <div id="tab-content-depth-chart" class="tab-pane hidden">
-                        <!-- Depth Chart with sub-tabs -->
                         <div>
-                            <!-- Depth Chart Sub-tabs -->
                             <div id="depth-chart-sub-tabs" class="flex border-b mb-4">
                                 <button data-sub-tab="offense" class="depth-chart-tab active">Offense</button>
                                 <button data-sub-tab="defense" class="depth-chart-tab">Defense</button>
                             </div>
-
-                            <!-- Sub-tab Panes -->
                             <div id="depth-chart-offense-pane" class="depth-chart-sub-pane">
-                                <div class="mb-4">
-                                    <label for="offense-formation-select" class="font-bold">Formation:</label>
-                                    <select id="offense-formation-select" class="p-2 border rounded ml-2"></select>
-                                </div>
-                                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                                    <div class="md:col-span-2">
-                                        <h4 class="text-lg font-bold mb-2">Offense Starters</h4>
-                                        <div id="offense-depth-chart-slots" class="space-y-2"></div>
-                                    </div>
-                                    <div>
-                                        <h4 class="text-lg font-bold mb-2">Available Players</h4>
-                                        <div id="offense-depth-chart-roster" class="roster-list"></div>
-                                    </div>
-                                </div>
+                                <div class="mb-4"><label for="offense-formation-select" class="mr-2 font-semibold">Formation:</label><select id="offense-formation-select" class="p-2 border rounded"></select></div>
+                                <div class="grid grid-cols-1 md:grid-cols-3 gap-6"><div class="md:col-span-2"><h4 class="text-lg font-bold mb-2">Offense Starters</h4><div id="offense-depth-chart-slots" class="space-y-2"></div></div><div><h4 class="text-lg font-bold mb-2">Available Players</h4><div id="offense-depth-chart-roster" class="roster-list"></div></div></div>
                             </div>
                             <div id="depth-chart-defense-pane" class="depth-chart-sub-pane hidden">
-                                 <div class="mb-4">
-                                    <label for="defense-formation-select" class="font-bold">Formation:</label>
-                                    <select id="defense-formation-select" class="p-2 border rounded ml-2"></select>
-                                </div>
-                                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                                    <div class="md:col-span-2">
-                                        <h4 class="text-lg font-bold mb-2">Defense Starters</h4>
-                                        <div id="defense-depth-chart-slots" class="space-y-2"></div>
-                                    </div>
-                                    <div>
-                                        <h4 class="text-lg font-bold mb-2">Available Players</h4>
-                                        <div id="defense-depth-chart-roster" class="roster-list"></div>
-                                    </div>
-                                </div>
+                                <div class="mb-4"><label for="defense-formation-select" class="mr-2 font-semibold">Formation:</label><select id="defense-formation-select" class="p-2 border rounded"></select></div>
+                                <div class="grid grid-cols-1 md:grid-cols-3 gap-6"><div class="md:col-span-2"><h4 class="text-lg font-bold mb-2">Defense Starters</h4><div id="defense-depth-chart-slots" class="space-y-2"></div></div><div><h4 class="text-lg font-bold mb-2">Available Players</h4><div id="defense-depth-chart-roster" class="roster-list"></div></div></div>
                             </div>
-
-                            <!-- Positional Overalls Spreadsheet -->
-                            <div class="mt-8">
-                                <h3 class="text-xl font-bold mb-4">Positional Overalls</h3>
-                                <div id="positional-overalls-container" class="overflow-x-auto"></div>
-                            </div>
+                            <div class="mt-8"><h3 class="text-xl font-bold mb-4">Positional Overalls</h3><div id="positional-overalls-container" class="overflow-x-auto"></div></div>
                         </div>
                     </div>
-                    <div id="tab-content-free-agency" class="tab-pane hidden">
-                        <h3 class="text-xl font-bold mb-4">Call a Friend</h3>
-                        <div id="free-agency-list"></div>
-                    </div>
-                    <div id="tab-content-schedule" class="tab-pane hidden">
-                        <h3 class="text-xl font-bold mb-4">Season Schedule</h3>
-                        <div id="schedule-list" class="space-y-4"></div>
-                    </div>
-                    <div id="tab-content-standings" class="tab-pane hidden">
-                        <h3 class="text-xl font-bold mb-4">League Standings</h3>
-                        <div id="standings-container" class="space-y-6"></div>
-                    </div>
+                    <div id="tab-content-messages" class="tab-pane hidden"><h3 class="text-xl font-bold mb-4">Text Messages</h3><div id="messages-list" class="space-y-2"></div></div>
+                    <div id="tab-content-schedule" class="tab-pane hidden"><h3 class="text-xl font-bold mb-4">Season Schedule</h3><div id="schedule-list" class="space-y-4"></div></div>
+                    <div id="tab-content-standings" class="tab-pane hidden"><h3 class="text-xl font-bold mb-4">League Standings</h3><div id="standings-container" class="space-y-6"></div></div>
                     <div id="tab-content-player-stats" class="tab-pane hidden">
-                        <div class="flex justify-between items-center mb-4">
-                            <h3 class="text-xl font-bold">League Player Stats</h3>
-                            <div class="flex items-center gap-4">
-                                <select id="stats-filter-team" class="p-2 border rounded">
-                                    <option value="">All Teams</option>
-                                </select>
-                                <select id="stats-sort" class="p-2 border rounded">
-                                    <option value="touchdowns">Touchdowns</option>
-                                    <option value="passYards">Pass Yards</option>
-                                    <option value="rushYards">Rush Yards</option>
-                                    <option value="recYards">Receiving Yards</option>
-                                    <option value="tackles">Tackles</option>
-                                </select>
-                            </div>
+                        <h3 class="text-xl font-bold mb-4">League Player Stats</h3>
+                        <div class="flex items-center gap-4 mb-4">
+                            <select id="stats-filter-team" class="p-2 border rounded bg-white"></select>
+                            <select id="stats-sort" class="p-2 border rounded bg-white"></select>
                         </div>
                         <div id="player-stats-container"></div>
                     </div>
-                    <div id="tab-content-hall-of-fame" class="tab-pane hidden">
-                        <h3 class="text-xl font-bold mb-4">Hall of Fame</h3>
-                        <div id="hall-of-fame-list"></div>
-                    </div>
+                    <div id="tab-content-hall-of-fame" class="tab-pane hidden"><h3 class="text-xl font-bold mb-4">Hall of Fame</h3><div id="hall-of-fame-list"></div></div>
                 </main>
             </div>
         </div>
 
-        <!-- Off-Season Screen -->
-        <div id="offseason-screen" class="hidden bg-white p-6 rounded-lg shadow-lg">
-            <h2 class="text-3xl font-bold text-center mb-6">Off-Season Report: Year <span id="offseason-year"></span></h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div>
-                    <h3 class="text-xl font-bold mb-2">Player Development</h3>
-                    <div id="player-development-container" class="space-y-2 h-96 overflow-y-auto"></div>
-                </div>
-                <div>
-                    <h3 class="text-xl font-bold mb-2">League News</h3>
-                    <div class="space-y-4">
-                        <div>
-                            <h4 class="font-semibold">Retirements</h4>
-                            <ul id="retirements-list" class="list-disc list-inside text-sm text-gray-700"></ul>
-                        </div>
-                         <div>
-                            <h4 class="font-semibold">Hall of Fame Inductees</h4>
-                            <ul id="hof-inductees-list" class="list-disc list-inside text-sm text-amber-700"></ul>
-                        </div>
-                    </div>
-                </div>
+        <!-- Offseason Screen -->
+        <div id="offseason-screen" class="hidden bg-white p-8 rounded-lg shadow-lg">
+            <h2 class="text-3xl font-bold text-center">Offseason Report: End of Season <span id="offseason-year"></span></h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-6">
+                <div><h3 class="text-xl font-bold mb-2 border-b pb-2">Player Development</h3><div id="player-development-container" class="space-y-2 max-h-96 overflow-y-auto"></div></div>
+                <div><h3 class="text-xl font-bold mb-2 border-b pb-2">Retirements</h3><ul id="retirements-list" class="list-disc list-inside space-y-1"></ul></div>
+                <div><h3 class="text-xl font-bold mb-2 border-b pb-2">Hall of Fame Inductees</h3><ul id="hof-inductees-list" class="list-disc list-inside space-y-1"></ul></div>
             </div>
             <div class="text-center mt-8">
-                <button id="go-to-next-draft-btn" class="bg-amber-500 hover:bg-amber-600 text-white font-bold py-3 px-8 rounded-lg text-lg">
-                    Proceed to Next Season's Draft
-                </button>
+                <button id="go-to-next-draft-btn" class="bg-amber-500 hover:bg-amber-600 text-white font-bold py-3 px-8 rounded-lg text-lg transition">Proceed to Next Season's Draft</button>
             </div>
         </div>
-
-
     </div>
 
-    <!-- Modal -->
-    <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50">
-        <div id="modal-content" class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-lg relative">
-            <h3 id="modal-title" class="text-2xl font-bold mb-4">Modal Title</h3>
-            <div id="modal-body">
-                <p>Modal content goes here.</p>
-            </div>
-            <div id="modal-actions" class="mt-6 text-right">
-                 <button id="modal-close-btn" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-6 rounded-lg">Close</button>
-            </div>
+    <!-- Universal Modal -->
+    <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4">
+        <div id="modal-content" class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-lg max-h-full overflow-y-auto">
+            <h3 id="modal-title" class="text-2xl font-bold mb-4"></h3>
+            <div id="modal-body"></div>
         </div>
     </div>
 
