--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <!-- Right Side Content -->
                 <main id="dashboard-content" class="w-4/5 bg-white p-6 rounded-lg shadow-md">
                     <div id="tab-content-my-team" class="tab-pane">
-                        <h3 class="text-xl font-bold mb-4">Team Roster</h3>
-                        <div id="my-team-roster" class="overflow-x-auto"></div>
+                         <h3 class="text-xl font-bold mb-4">Team Roster</h3>
+                         <div id="my-team-roster" class="overflow-x-auto"></div>
                     </div>
                     <div id="tab-content-depth-chart" class="tab-pane hidden">
                         <div>
@@ -199,6 +199,7 @@
         <div id="modal-content" class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-lg max-h-full overflow-y-auto">
             <h3 id="modal-title" class="text-2xl font-bold mb-4"></h3>
             <div id="modal-body"></div>
+            <!-- Modal actions are added dynamically -->
         </div>
     </div>
 
