--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
        All module scripts are loaded here.
        'main.js' will orchestrate everything.
      -->
-    <script type="module" src="main.js"></script>
+    <script src="./js/main.js" type="module"></script>
  </body>
  </html>
 
