--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-gray-100 font-sans">
 
-    <div id="game-container" class="container mx-auto p-4 max-w-7xl">
+    <div id="game-container" class="container mx-auto p-4">
 
         <div id="start-screen" class="text-center p-8 bg-white rounded-lg shadow-lg">
             <h1 class="font-bangers text-6xl text-amber-500 tracking-wider">Backyard Football</h1>
