--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
                  <div class="text-center w-1/3"><p id="sim-game-drive" class="text-sm"></p><p id="sim-game-down" class="text-sm"></p><p id="sim-possession" class="text-xs mt-1"></p></div>
                  <div class="text-center w-1/3"><p id="sim-home-team" class="text-lg font-bold"></p><p id="sim-home-score" class="text-4xl font-bangers"></p></div>
              </div>
-             <div id="sim-field-visualization" class="bg-green-700 p-2 rounded mb-4 text-center font-mono text-sm border-4 border-gray-400"><pre id="field-display" class="text-white whitespace-pre"></pre></div>
+             <div id="sim-field-visualization" class="bg-green-700 p-2 rounded mb-4 text-center font-mono text-sm border-4 border-gray-400">
+        <        canvas id="field-canvas" width="600" height="320">Your browser does not support the canvas element.</canvas>
+    </div        </div>
              <h4 class="font-bold text-lg mb-2 text-amber-400">Play-by-Play</h4>
              <div id="sim-play-log" class="bg-gray-700 p-3 rounded h-64 overflow-y-auto text-sm mb-4">
                  </div>
