--- a/index.html
+++ b/index.html
@@ -67,22 +67,23 @@
                      <div class="overflow-auto h-[600px]">
                          <table class="min-w-full text-sm">
                              <thead class="bg-gray-800 text-white sticky top-0 z-10">
-                                 <tr>
-                                     <th scope="col" class="py-2 px-3 text-left">Name</th>
-                                     <th scope="col" class="py-2 px-3">Age</th>
-                                     <th scope="col" class="py-2 px-3">Pot</th> <th scope="col" class="py-2 px-3">Rel</th> <th scope="col" class="py-2 px-3">Pref Pos</th>
-                                     <th scope="col" class="py-2 px-3">Hgt</th>
-                                     <th scope="col" class="py-2 px-3">Wgt</th>
-                                     <th scope="col" class="py-2 px-3">Spd</th>
-                                     <th scope="col" class="py-2 px-3">Str</th>
-                                     <th scope="col" class="py-2 px-3">Agi</th>
-                                     <th scope="col" class="py-2 px-3">Thr</th>
-                                     <th scope="col" class="py-2 px-3">Cat</th>
-                                     <th scope="col" class="py-2 px-3">Blk</th>
-                                     <th scope="col" class="py-2 px-3">Tck</th>
-                                     <th scope="col" class="py-2 px-3">BlS</th>
-                                 </tr>
-                             </thead>
+                                <tr>
+                                    <th scope="col" class="py-2 px-3 text-left" data-sort="name">Name<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="age">Age<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="potential">Pot<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3">Rel<span class="sort-indicator"></span></th> <th scope="col" class="py-2 px-3" data-sort="position">Pref Pos<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="height">Hgt<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="weight">Wgt<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="speed">Spd<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="strength">Str<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="agility">Agi<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="throwingAccuracy">Thr<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="catchingHands">Cat<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="blocking">Blk<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="tackling">Tck<span class="sort-indicator"></span></th>
+                                    <th scope="col" class="py-2 px-3" data-sort="blockShedding">BlS<span class="sort-indicator"></span></th>
+                                </tr>
+                            </thead>
                              <tbody id="draft-pool-tbody" class="divide-y"></tbody>
                          </table>
                      </div>
