added in game subs

--- a/index.html
+++ b/index.html
@@ -299,6 +299,11 @@
                     <div id="sim-stats-home"></div>
                 </div>
             </div>
+            <!-- Players panel: shows roster, fatigue and allows substitutions -->
+            <div id="sim-players-panel" class="mt-4 bg-gray-700 p-3 rounded text-sm">
+                <h4 class="font-bold text-lg mb-2 text-amber-400 text-center">Players & Substitutions</h4>
+                <div id="sim-players-list" class="max-h-56 overflow-y-auto"></div>
+            </div>
         </div>
 
 
